--- a/css/style.css
+++ b/css/style.css
@@ -134,9 +134,9 @@ input.placeholder, textarea.placeholder{color:#000;}
 /**************** GLOBAL *****************/
 
 html {background: #fff; color: #000; font: 18px/22px Harmonia;}
-html, body {min-width: 1200px;}
+html, body {min-width: 380px;}
 	#global_wrapper {overflow:hidden; position:relative;}
-		.wrapper {margin: 0 auto; position: relative; width: 1100px; height: 100%;}
+		.wrapper {margin: 0 auto; position: relative; max-width: 1200px; height: 100%;}
 
 .non-scroll {overflow: hidden !important;}
 .clear {clear: both;}
@@ -168,7 +168,7 @@ html, body {min-width: 1200px;}
 		.next_block:hover {background-position: -97px 0;}
 
 	/*------ Forms  ------*/
-	form {width: 788px; margin: auto; border: 1px solid #fff; padding: 24px 18px 26px 9px; color: #fff;}
+	form {width: 80%; margin: auto; border: 1px solid #fff; padding: 24px 18px 26px 9px; color: #fff;}
 		form ul {width: 386px; float: left; padding-top: 50px;}
 			form ul li {list-style: none; font: 600 20px/24px Harmonia; padding-left: 48px; position: relative; margin-bottom: 20px;}
 			form ul li:before {content:''; display: block; width: 37px; height: 37px; background: url(../images/icons.png) -9999px 0 no-repeat; margin: auto; position: absolute; top: 0; bottom: 0; left: 0;}
@@ -190,6 +190,10 @@ html, body {min-width: 1200px;}
 			form .fields p {font: 18px/22px Harmonia; margin-bottom: 15px;}
 			input[type="text"], input[type="email"], input[type="tel"], textarea[name="client_message"] {display: block; width: 100%; background: #fff url(../images/form_icons.png) -9999px 0 no-repeat; font: 18px/18px Harmonia; color: #000; padding: 14px 13px 10px 36px; margin-bottom: 10px; border-radius: 6px; box-shadow: 0 3px 0 #cacaca inset; position: relative; behavior:url(/PIE/PIE.php);}
 			input[name="client_name"] {background-position: 13px 15px;}
+			    input[type="file"]{
+			    	font-size: 14px;
+				    border-radius: 8px;
+				    margin: 5px 0;}
 				input[name="client_name"].error {background-position: 13px -190px;}
 			input[name="client_phone"] {background-position: 13px -53px;}
 				input[name="client_phone"].error {background-position: 13px -258px;}
@@ -211,11 +215,16 @@ header .overlay {height: 100%; background: rgba(27, 3, 58, 0.5); position: relat
 header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0; top: 0; padding-top: 16px;}
 	header .name {font: 600 18px/22px Harmonia; color: #fff; text-transform: uppercase; float: left;}
 		header .name b {display: block; font: 28px/30px Harmonia; color: #97ce5c;}
-	header .phone {display: block; font: 700 30px/32px Harmonia; color: #fff; float: right;}
+	header .phone {
+		display: inline-block;
+	    font: 700 23px/32px Harmonia;
+	    color: #fff;
+	    vertical-align: text-bottom;
+	}
 		header .phone:hover {color: #ccc;}
 		header .phone:active {color: #f00;}
-	header .wrapper > [class*="item"] {display: table; width: 253px; height: 120px; color: #fff; text-align: center; text-transform: uppercase; padding: 13px 0; border: 1px solid #fff; float: left; margin: 0 0 13px 13px; position: relative;}
-	header .wrapper > .item-1 {margin-left: 155px;}
+	header .wrapper > [class*="item"] {display: table; width: 30%; height: 120px; color: #fff; text-align: center; text-transform: uppercase; padding: 13px 0; border: 1px solid #fff; float: left; margin: 0 0 13px 13px; position: relative;}
+	header .wrapper > .item-1 {margin: 0 auto;}
 		header .wrapper > [class*="item"] b {display: block; font: 900 30px/32px Harmonia; color: #97ce5c;}
 		header .wrapper > [class*="item"] .note {font-weight: 600; position: absolute; top: -35px; padding-left: 28px;}
 		header .wrapper > .item-1 .note {left: 0;}
@@ -420,7 +429,7 @@ header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0
 #bottom_form .wrapper {padding: 155px 0 0;}
 	footer {height: 144px; position: absolute; left: 0; bottom: -10px; color: #fff;}
 		footer b {display: inline-block; font: 600 24px/28px Harmonia; text-transform: uppercase; border-bottom: 1px solid #fff; margin-bottom: 6px;}
-		footer .phone {display: block; font-weight: 600;}
+		footer .phone {display: inline-block; font-weight: 600;}
 			footer .phone:hover {color: #ccc;}
 			footer .phone:active {color: #f00;}
 		footer .modal_confidence {display: inline-block; font-style: italic; border-bottom: 1px dotted #fff;}
@@ -462,3 +471,69 @@ header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0
 			#modal_success h4 b {color: #5d3c8a;}
 		#modal_success p {font: 600 18px/22px Harmonia; color: #111; text-align: center;}
 			#modal_success p b {color: #5d3c8a; display: block;}
+
+.judges{
+	width: 100%;
+	text-align: center;
+	
+}
+.judges h2{
+	margin-bottom: 40px;
+}
+.judge{
+	display: inline-block;
+	margin-right: 2%;
+	width: 30%;
+}
+.judge p{
+	font-size: 18px;
+	
+}
+.judge img{
+	width: 100%;
+    border-radius: 30%;
+}
+
+iframe{
+	width: 100%;
+	height: 400px;
+}
+@media screen and (max-width: 1380px){
+	#how {
+	    height: 1105px;
+	}
+	header {
+	    height: 920px;
+	}
+}
+
+@media screen and (max-width: 1050px){
+	
+	#how [class*="item"] b {
+	    width: 300px;
+	    left: -315px;
+	}
+}
+@media screen and (max-width: 870px){
+	
+	#how [class*="item"] b {
+	    width: 200px;
+	    left: -215px;
+	}
+	.caption{
+		font-size: 45px;
+	}
+	#how {
+	    height: 1158px;
+	}
+	header {
+	    height: 1020px;
+	}
+}
+
+@media screen and (max-width: 620px){
+	
+header .phone{
+	font-size: 16px;
+}
+}
