--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ html, body {min-width: 380px;}
 
 /**************** HEADER *****************/
 
-header {height: 870px; overflow: hidden; position: relative; background: #110b27 url(../images/video_pic.jpg);}
+header {height: 930px; overflow: hidden; position: relative; background: #110b27 url(../images/video_pic.jpg);}
 header .overlay {height: 100%; background: rgba(27, 3, 58, 0.5); position: relative; z-index: 2;}
 		header .overlay .dots {height: 100%; background: url(../images/dots.png);}
 .video{width: 1980px; height: 1080px; margin: auto; position: absolute; left: 0px; right: 0; top: -150px; background: url(../images/video_pic.jpg) center 150px no-repeat; z-index: 1;}
@@ -303,7 +303,7 @@ header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0
 
 /**************** HOW *****************/
 
-#how {height: 1064px; background: url(../images/how_bg.jpg) center top repeat-y fixed; margin-top: -41px; position: relative;}
+#how {height: 1064px; background: url(../images/how_bg.jpg) center top repeat-y fixed; margin-top: -10px; position: relative;}
 #how:before, #how:after {content:''; display: block; width: 2000px; margin: auto; position: absolute; left: 0; right: 0;}
 #how:before {background: url(../images/how_top_mask.png) center top no-repeat; height: 61px; top: 0;}
 #how:after {background: url(../images/how_bottom_mask.png) center top no-repeat; height: 89px; bottom: 0;}
@@ -425,7 +425,7 @@ header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0
 
 /**************** BOTTOM FORM *****************/
 
-#bottom_form {height: 721px; background: url(../images/bottom_form_bg.jpg) center bottom no-repeat; position: relative;}
+#bottom_form {height: 555px; background: url(../images/bottom_form_bg.jpg) center bottom no-repeat; position: relative;}
 #bottom_form .wrapper {padding: 155px 0 0;}
 	footer {height: 144px; position: absolute; left: 0; bottom: -10px; color: #fff;}
 		footer b {display: inline-block; font: 600 24px/28px Harmonia; text-transform: uppercase; border-bottom: 1px solid #fff; margin-bottom: 6px;}
@@ -498,6 +498,25 @@ header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0
 .social-block a{
 	
 }
+.contacts{
+	text-align: center;
+	font-weight: 600;
+	line-height: 43px;
+	color: #FFF;
+	font-size: 32px;
+	margin: 1% 0 0 20%;
+	width: 60%;
+	display: inline-block;
+}
+.contacts p{
+	font-size: 20px;
+}
+.contacts i{
+	font-weight: 400;
+	font-style: normal;
+	display: block;
+	font-size: 14px;
+}
 .map{
 	width: 300px;
 	display: inline-block;
@@ -562,3 +581,8 @@ header .phone{
 }
 }
 
+.footer{
+	width: 100%;
+	height: 144px;
+	background: url(../images/footer_bg.jpg);
+}
