--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ html, body {min-width: 380px;}
 
 /**************** HEADER *****************/
 
-header {height: 980px; overflow: hidden; position: relative; background: #110b27 url(../images/miss_main.png) 100% 20px no-repeat;-webkit-background-size: contain;
+header {height: 780px; overflow: hidden; position: relative; background: #110b27 url(../images/miss_main.png) 100% 83px no-repeat;-webkit-background-size: contain;
      -o-background-size: contain;
         background-size: contain;}
 header .overlay {height: 100%; position: relative; z-index: 2;}
@@ -686,4 +686,30 @@ iframe{
     font-size: 60px;
     margin: 0;
     padding: 0 0 20px 0;
+}
+
+
+
+
+
+/*slick slider*/
+
+.slider-item{
+	width: 100%;
+	height: 180px;
+	overflow: hidden;
+	-webkit-border-radius: 40px;
+	        border-radius: 40px;
+	margin-right: 10px;
+}
+.slider-item img{
+	width: 100%;
+	height: auto;
+}
+.slick-next.slick-arrow, .slick-prev.slick-arrow{
+	display: none !important;
+}
+.caption4{
+	    margin: 0;
+    padding: 50px 0 15px 0;
 }
