--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ html, body {min-width: 380px;}
 
 	/*------ Headers  ------*/
 	 h2, h3, h4, h5, h6 {text-align: center;}
-	h1 {font: 300 86px/88px Harmonia; color: #fff; text-transform: uppercase; margin: 100px auto 60px;}
+	h1 {font: 300 86px/88px Harmonia; color: #333; text-transform: uppercase; margin: 100px auto 60px;}
 		h1 span {position: relative;}
 		h1 span:after {content:''; display: block; width: 100%; height: 1px; background: #fff; position: absolute; left: 0; bottom: -5px;}
 			h1 span b {font: 700 46px/48px Harmonia; color: #fc0000; position: absolute; top: -40px; right: 0;}
@@ -223,9 +223,9 @@ html, body {min-width: 380px;}
 
 /**************** HEADER *****************/
 
-header {height: 780px; overflow: hidden; position: relative; background: #110b27 url(../images/miss_main.png) 100% 83px no-repeat;-webkit-background-size: contain;
-     -o-background-size: contain;
-        background-size: contain;}
+header {height: 780px; overflow: hidden; position: relative; background: #110b27 url(../images/bg-header.png) 0 0px no-repeat;-webkit-background-size: cover;
+     -o-background-size: cover;
+        background-size: cover;}
 header .overlay {height: 100%; position: relative; z-index: 2;}
 		header .overlay .dots {height: 100%;}
 .video{width: 1980px; height: 1080px; margin: auto; position: absolute; left: 0px; right: 0; top: -150px; background: url(../images/video_pic.jpg) center 150px no-repeat; z-index: 1;}
@@ -574,6 +574,9 @@ iframe{
 	.judge{
 		width: 48%;
 	}
+/*	header {
+			background: #110b27 url(../images/mobile-bg.jpg) 100% 113px no-repeat;
+		}*/
 }
 @media screen and (max-width: 870px){
 	
@@ -621,11 +624,12 @@ iframe{
 		width: 90px !important;
 	}
 	.big-caption{
-    font: 300 62px/78px Harmonia;
-    color: #fff;
-    text-transform: uppercase;
-    margin: 0px auto 39px;
-}
+	    font: 300 62px/78px Harmonia;
+	    color: #fff;
+	    text-transform: uppercase;
+	    margin: 45px auto 39px;
+	}
+		
 }
 
 .footer{
