--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ html, body {min-width: 380px;}
 
 /**************** HEADER *****************/
 
-header {height: 780px; overflow: hidden; position: relative; background: #110b27 url(../images/bg-header.png) 0 0px no-repeat;-webkit-background-size: cover;
+header {height: 780px; overflow: hidden; position: relative; background: #e4edf8 url(../images/bg-header.png) 0 0px no-repeat;-webkit-background-size: cover;
      -o-background-size: cover;
         background-size: cover;}
 header .overlay {height: 100%; position: relative; z-index: 2;}
@@ -236,7 +236,7 @@ header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0
 	header .phone {
 		display: inline-block;
 	    font: 700 34px/32px Harmonia;
-	    color: #fff;
+	    color: #000;
 	    vertical-align: text-bottom;
 	}
 		header .phone:hover {color: #ccc;}
@@ -690,8 +690,9 @@ iframe{
 	background: #ff0000;
 }
 .description{
+	font-weight: 900;
+    color: #000;
     width: 60%;
-    color: #fff;
     padding-bottom: 30px;
 }
 .description h2{
