--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ html, body {min-width: 380px;}
 
 	/*------ Headers  ------*/
 	 h2, h3, h4, h5, h6 {text-align: center;}
-	h1 {font: 300 86px/88px Harmonia; color: #fff; text-transform: uppercase; margin: 100px auto 60px;}
+	h1 {font: 300 86px/88px Harmonia; color: #000; text-transform: uppercase; margin: 100px auto 60px;}
 		h1 span {position: relative;}
 		h1 span:after {content:''; display: block; width: 100%; height: 1px; background: #fff; position: absolute; left: 0; bottom: -5px;}
 			h1 span b {font: 700 46px/48px Harmonia; color: #fc0000; position: absolute; top: -40px; right: 0;}
@@ -223,12 +223,11 @@ html, body {min-width: 380px;}
 
 /**************** HEADER *****************/
 
-header {height: 780px; overflow: hidden; position: relative; background: #110b27 url(../images/bg-header.png) 0 0px no-repeat;-webkit-background-size: cover;
+header {z-index: 999;height: 780px; overflow: hidden; position: relative; background: #d3e6f6 url(../images/bg-header.png) 0 0px no-repeat;-webkit-background-size: cover;
      -o-background-size: cover;
         background-size: cover;}
 header .overlay {height: 100%; position: relative; z-index: 2;}
-		header .overlay .dots {height: 100%;
-		background: rgba(0,0,0,0.7);}
+		header .overlay .dots {height: 100%;}
 .video{width: 1980px; height: 1080px; margin: auto; position: absolute; left: 0px; right: 0; top: -150px; background: url(../images/video_pic.jpg) center 150px no-repeat; z-index: 1;}
 	#video {}
 header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0; top: 0; padding-top: 16px;}
@@ -237,11 +236,12 @@ header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0
 	header .phone {
 		display: inline-block;
 	    font: 700 34px/32px Harmonia;
-	    color: #fff;
+	    color: #000;
 	    vertical-align: text-bottom;
+	    text-shadow: 4px 4px 2px rgba(61, 61, 61, 1);
 	}
 		header .phone:hover {color: #ccc;}
-		header .phone:active {color: #f00;}
+		header .phone:active {color: #ccc;}
 	header .wrapper > [class*="item"] {display: table; width: 20%; height: 120px; color: #fff; text-align: center; text-transform: uppercase; padding: 13px 0; border: 1px solid #fff; float: left; margin: 0 0 13px 13px; position: relative;}
 	header .wrapper > .item-1 {margin: 0 auto;}
 		header .wrapper > [class*="item"] b {display: block; font: 900 30px/32px Harmonia; color: #fc0000;}
@@ -692,7 +692,7 @@ iframe{
 }
 .description{
     width: 60%;
-    color: #fff;
+    color: #000;
     padding-bottom: 30px;
 }
 .description h2{
