--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ html, body {min-width: 380px;}
 
 	/*------ Headers  ------*/
 	 h2, h3, h4, h5, h6 {text-align: center;}
-	h1 {font: 300 86px/88px Harmonia; color: #000; text-transform: uppercase; margin: 100px auto 60px;}
+	h1 {font: 300 86px/88px Harmonia; color: #fff; text-transform: uppercase; margin: 100px auto 60px;}
 		h1 span {position: relative;}
 		h1 span:after {content:''; display: block; width: 100%; height: 1px; background: #fff; position: absolute; left: 0; bottom: -5px;}
 			h1 span b {font: 700 46px/48px Harmonia; color: #fc0000; position: absolute; top: -40px; right: 0;}
@@ -227,7 +227,8 @@ header {z-index: 999;height: 780px; overflow: hidden; position: relative; backgr
      -o-background-size: cover;
         background-size: cover;}
 header .overlay {height: 100%; position: relative; z-index: 2;}
-		header .overlay .dots {height: 100%;}
+		header .overlay .dots {height: 100%;
+		background: rgba(0,0,0,0.5);}
 .video{width: 1980px; height: 1080px; margin: auto; position: absolute; left: 0px; right: 0; top: -150px; background: url(../images/video_pic.jpg) center 150px no-repeat; z-index: 1;}
 	#video {}
 header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0; top: 0; padding-top: 16px;}
@@ -236,9 +237,9 @@ header .wrapper {z-index: 3; margin: auto; position: absolute; left: 0; right: 0
 	header .phone {
 		display: inline-block;
 	    font: 700 34px/32px Harmonia;
-	    color: #000;
+	    color: #fff;
 	    vertical-align: text-bottom;
-	    text-shadow: -2px 3px 2px rgba(255, 255, 255, 1);
+
 }
 
 
@@ -629,7 +630,6 @@ iframe{
 	}
 	.big-caption{
 	    font: 300 62px/78px Harmonia;
-	    color: #fff;
 	    text-transform: uppercase;
 	    margin: 45px auto 39px;
 	}
@@ -694,8 +694,9 @@ iframe{
 	background: #ff0000;
 }
 .description{
+	font-weight: 900;
     width: 60%;
-    color: #000;
+    color: #fff;
     padding-bottom: 30px;
 }
 .description h2{
@@ -730,3 +731,9 @@ iframe{
 	margin: 0;
     padding: 50px 0 15px 0;
 }
+ .caption5{
+ 	
+    border-bottom: 3px solid red;
+    display: block;
+    padding-bottom: 15px;
+ }
